# fifaworldcup2026

./: .gitignore  FLAG_UPDATE_SUMMARY.md  GAME_LOGIC_AND_DATABASE.md  KNOCKOUT_BRACKET_FIX.md  Plan.md  README.md  README_FLAGS.md  README_PROPAGATION.md  SIMULATION_SCRIPTS.md  TAILWIND_SETUP.md  TOURNAMENT_EXPANSION_SUMMARY.md  generate_user_picks.py  main.py  migrate_quickgames.py  package-lock.json  package.json  pyproject.toml  reproduce_issue.py  robots.txt  seed_data.py  simulate_full_tournament.py  sitemap.xml  tailwind.config.js  worldcup.db
app/: __init__.py  auth.py  config.py  database.py  dependencies.py  flags.py  knockout.py  models.py  scoring.py  standings.py  tournament_config.py
data_add/: data.csv  kalshi_scripts.py
debug/: README.md  debug_final.py  debug_matches_v2.py  debug_models.py
docs/: dummy-results-script.md
marimo/: testdbs.py
marimo_/: database_analysis.py
migrations/: 001_settings_redesign.py  002_add_penalty_scores.py  003_fix_users_schema.py  004_add_quickgame_tiebreakers.py  005_add_match_metadata.py  006_fix_knockout_bracket.py  006_update_round_of_32.py  README.md
mockups/: CSV_WORKFLOW_SUMMARY.md  README.md  add_missing_matches.py  convert_knockout_to_group.py  export_group_matches_csv.py  group_stage_matches.csv  import_group_results_csv.py  master_wd_file.csv  world-cup_2026.csv
scripts/: fix_groups.py  propagate_from_csv.py  seed_matches.py  seed_players.py  seed_stadiums.py  seed_teams.py  update_data.py
simulations/: SIMULATION_SCRIPTS.md  seed_data.py  seed_player.py  simulate_full_tournament.py
(+98 files in other folders)
