[project]
name = "fifa-worldcup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
