[project]
name = "fifaworldcup2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "marimo>=0.19.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
